test/interpreter/error/err_06_array_neg_index.pl0
program arrayTests;
var a[10];
begin
  { Attempt to access negative index - likely a runtime error }
  a[-1] := 5;
end
